apps/open-webui/base/HTTProute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
  namespace: open-webui
spec:
  parentRefs:
  - name: public
    sectionName: https
    namespace: nginx-gateway 
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: open-webui
      port: 8080
      namespace: open-webui
